--- a/index.html
+++ b/index.html
@@ -53,6 +53,70 @@
             </div>
           </nav>
         <!-- navbar ends -->
+
+        <!-- banner starts -->
+        <section class="banner">
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <div class="overlay">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>The perfect venue for your next event</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                            <a href="#">book now</a>
+                          </div>
+                    </div>
+                    
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/banner2.jpg" class="d-block w-100" alt="">
+                    <div class="overlay">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>The perfect venue for your next event</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                            <a href="#">book now</a>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/banner3.jpg" class="d-block w-100" alt="...">
+                    <div class="overlay">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>The perfect venue for your next event</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                            <a href="#">book now</a>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/banner4.jpg" class="d-block w-100" alt="...">
+                    <div class="overlay">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>The perfect venue for your next event</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit </p>
+                            <a href="#">book now</a>
+                          </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+        <!-- banner ends -->
     </header>
 
     <!-- body -->
