--- a/index.html
+++ b/index.html
@@ -121,7 +121,23 @@
 
     <!-- body -->
     <main>
+      <!-- about-us starts -->
+      <section class="container about-us">
+        <div class="about row row-cols-lg-2 gx-5">
+          <div class="image">
+            <img class="img-fluid" src="images/wedding.png" alt="">
+          </div>
+          <div class="contents">
+            <h3>Every moment is precious</h3>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
 
+            <a href="#">Explore our album <i class="fa-solid fa-right-long"></i></a>
+          </div>
+        </div>
+      </section>
+       <!-- about-us ends -->
     </main>
     <!-- footer -->
     <footer>
