package section added and badge

--- a/index.html
+++ b/index.html
@@ -132,12 +132,92 @@
             <p>
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
-
+            <!-- toast  starts -->
+            <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+              <div class="d-flex bg-primary">
+                <div class="toast-body">
+                  Hello, world! This is a toast message.
+                </div>
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+              </div>
+            </div>
+            <!-- toast  ends -->
             <a href="#">Explore our album <i class="fa-solid fa-right-long"></i></a>
           </div>
         </div>
       </section>
        <!-- about-us ends -->
+
+       <!-- package starts -->
+       <section class="package">
+        <div class="container">
+          <h3 class="heading">our packages</h3>
+          <div class="package-items row row-cols-lg-4">
+            <div class="item">
+              <h4>$300</h4>
+              <h5>business fair</h5>
+              <p class="mb-0">
+                For most businesses event like book fair, craft fair.
+              </p>
+              <ul class="ms-0">
+                <li><i class="fa-solid fa-check"></i> limited space access</li>
+                <li><i class="fa-solid fa-check"></i> Secuirty facility</li>
+                <li><i class="fa-solid fa-check"></i> event support</li>
+                <li><i class="fa-solid fa-check"></i> Decoration design</li>
+                <li><i class="fa-solid fa-check"></i> Per day bill</li>
+              </ul>
+              <a href="#">choose plan</a>
+            </div>
+            <div class="item">
+              <h4>$300</h4>
+              <h5>business fair</h5>
+              <p class="mb-0">
+                For most businesses event like book fair, craft fair.
+              </p>
+              <ul class="ms-0">
+                <li><i class="fa-solid fa-check"></i> limited space access</li>
+                <li><i class="fa-solid fa-check"></i> Secuirty facility</li>
+                <li><i class="fa-solid fa-check"></i> event support</li>
+                <li><i class="fa-solid fa-check"></i> Decoration design</li>
+                <li><i class="fa-solid fa-check"></i> Per day bill</li>
+              </ul>
+              <a href="#">choose plan</a>
+            </div>
+            <div class="item">
+              <span class="badge text-bg-danger">Hot</span>
+              <h4>$300</h4>
+              <h5>business fair</h5>
+              <p class="mb-0">
+                For most businesses event like book fair, craft fair.
+              </p>
+              <ul class="ms-0">
+                <li><i class="fa-solid fa-check"></i> limited space access</li>
+                <li><i class="fa-solid fa-check"></i> Secuirty facility</li>
+                <li><i class="fa-solid fa-check"></i> event support</li>
+                <li><i class="fa-solid fa-check"></i> Decoration design</li>
+                <li><i class="fa-solid fa-check"></i> Per day bill</li>
+              </ul>
+              <a href="#">choose plan</a>
+            </div>
+            <div class="item">
+              <h4>$300</h4>
+              <h5>business fair</h5>
+              <p class="mb-0">
+                For most businesses event like book fair, craft fair.
+              </p>
+              <ul class="ms-0">
+                <li><i class="fa-solid fa-check"></i> limited space access</li>
+                <li><i class="fa-solid fa-check"></i> Secuirty facility</li>
+                <li><i class="fa-solid fa-check"></i> event support</li>
+                <li><i class="fa-solid fa-check"></i> Decoration design</li>
+                <li><i class="fa-solid fa-check"></i> Per day bill</li>
+              </ul>
+              <a href="#">choose plan</a>
+            </div>
+          </div>
+        </div>
+       </section>
+       <!-- package ends -->
     </main>
     <!-- footer -->
     <footer>
