client section added

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
               <a href="#">choose plan</a>
             </div>
             <div class="item">
-              <h4>$300</h4>
-              <h5>business fair</h5>
+              <h4>$500</h4>
+              <h5>wedding basic</h5>
               <p class="mb-0">
                 For most businesses event like book fair, craft fair.
               </p>
@@ -185,8 +185,8 @@
             </div>
             <div class="item">
               <span class="badge text-bg-danger">Hot</span>
-              <h4>$300</h4>
-              <h5>business fair</h5>
+              <h4>$800</h4>
+              <h5>wedding plus</h5>
               <p class="mb-0">
                 For most businesses event like book fair, craft fair.
               </p>
@@ -200,8 +200,8 @@
               <a href="#">choose plan</a>
             </div>
             <div class="item">
-              <h4>$300</h4>
-              <h5>business fair</h5>
+              <h4>$1200</h4>
+              <h5>corporate event</h5>
               <p class="mb-0">
                 For most businesses event like book fair, craft fair.
               </p>
@@ -218,6 +218,37 @@
         </div>
        </section>
        <!-- package ends -->
+
+       <!-- clients ends -->
+       <section class="client">
+        <div class="container">
+          <h3 class="heading">happy clients says</h3>
+          <div class="row client-cards gx-5">
+            <div class="card">
+              <p>Slate helps you see how 
+                many more days you need to work to reach your financial goal for the month and year.</p>
+                <img src="images/person 1.png" alt="person">
+                <h3 class="name">Regina Miles</h3>
+                <h5 class="title">banker</h5>
+            </div>
+            <div class="card">
+              <p>Slate helps you see how 
+                many more days you need to work to reach your financial goal for the month and year.</p>
+                <img src="images/person 2.png" alt="person">
+                <h3 class="name">Siraj Malik</h3>
+                <h5 class="title">banker</h5>
+            </div>
+            <div class="card">
+              <p>Slate helps you see how 
+                many more days you need to work to reach your financial goal for the month and year.</p>
+                <img src="images/person 3.png" alt="person">
+                <h3 class="name">Milar Range</h3>
+                <h5 class="title">banker</h5>
+            </div>
+          </div>
+        </div>
+       </section>
+       <!-- clients ends -->
     </main>
     <!-- footer -->
     <footer>
