--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
   </main>
   <!-- footer -->
   <footer>
-
+    <p> © 2020 bike. A ll rights reserved</p>
   </footer>
 
   <!-- bootstraps js file -->
